--- a/build.gradle
+++ b/build.gradle
@@ -52,7 +52,7 @@ dependencies {
 
     testImplementation "io.kotest:kotest-runner-junit5:$kotestVersion"
     testImplementation "io.kotest:kotest-assertions-core:$kotestVersion"
-
+    testImplementation "org.jetbrains.kotlin:kotlin-test:2.0.20"
 
 
 }
